# FileSense-AI

./: .gitignore  AI_FEATURES.md  ARCHITECTURE.md  BUGFIX_SCAN_ENGINE.md  CHANGES.md  DOWNLOAD_HELP_UPDATE.md  DOWNLOAD_SOLUTIONS.md  GITHUB_SETUP.md  HOTFIX.md  INSTALL-LLAMA.md  LICENSE  LINK_TEST_REPORT.md  LLM-USAGE.md  MODEL_DOWNLOAD_GUIDE.md  PACKAGING.md  PAUSE_RESUME_FIX.md  PERFORMANCE_OPTIMIZATIONS.md  PREVIEW.md  PRODUCTION_READINESS.md  README.md  ROADMAP.md  RUN_GUIDE.md  UI 优化完成说明.md  UI 布局修复说明.md  UPGRADES.md  check-syntax.js  debug-model.js  download-models-cli.js  download-models.bat  index.html  install-llama.bat  package-lock.json  package.json  run-link-test.bat  run.bat  start.bat  test-download-links.bat  test-download-links.js  test-download-links.ps1  test-download.bat  (+20 more)
docs/: UNIFIED-INDEX-ARCH.md  data-flow.mmd
native/: Cargo.toml  README.md  fallback.js  index.js  package.json  test.js
native/scripts/: move-binary.js
native/src/: hasher.rs  lib.rs  scanner.rs
native/src/platform/: windows.rs
scripts/: before-build.js  build-all.bat  build-all.js  build-linux.sh  build-macos.sh  build-windows.bat  create-release.bat  create-release.sh
src/: ai-diff-summarizer.js  ai-engine-simple.js  ai-engine.js  ai-search-service.js  ai-settings.html  batch-writer.js  bloom-filter.js  download-help.html  feature-flags.js  index-db.js  main.js  mft-scanner.js  mmap-reader.js  model-downloader.js  model-path-manager.js  operation-logger.js  playground.js  preference-learner.js  retention-scoring.js  safe-file-ops.js  scanner-worker.js  scanner.js  (+10 more)
(+1 files in other folders)
